# tasks

./: AGENTS.md  AGENT_GUIDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.claude/: settings.json
.claude/hooks/: rust-fmt-fix.ps1
.githooks/: README.md  pre-push
.github/: dependabot.yml  settings.yml
.github/workflows/: ci.yml
src/: db.rs  main.rs  models.rs
