[package]
name = "tasks"
version = "0.8.0"
edition = "2024"
repository = "https://github.com/Centronias/tasks"

[dependencies]
clap       = { version = "4", features = ["derive"] }
clap_complete = "4"
rusqlite   = { version = "0.40", features = ["bundled"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono     = { version = "0.4", features = ["serde"] }
anyhow     = "1"
comfy-table = "7"

[dev-dependencies]
rstest = "~0.26"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
